--- a/CSF1Homework/CSF1Homework.csproj
+++ b/CSF1Homework/CSF1Homework.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>CSF1Homework.ATM</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,8 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ATM.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WarmupFruitloop2.cs" />
+    <Compile Include="WarmupFruitLoop1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
